tests/negative/gold/indent7-test.gold
tests/negative/indent7-test.toit:7:6: error: Empty blocks are not allowed
  fun:
     ^
tests/negative/indent7-test.toit:8:12: error: Unresolved identifier: 'unresolved'
  local := unresolved
           ^~~~~~~~~~
Compilation failed
